# todox

./: Cargo.toml  LICENSE  README.md
.sqlx/: query-6f1c753c74c2310cdf247b9b538cc986c3cf4b7d1f09ce0ed14417bfd6a44975.json  query-7c4787733126459d1bcde17e9884cc44d44fcd4d3b481ef200843831dcf3d729.json  query-827b9b906d38ef11c223b03865edee13679112b7a0e55980327b6e1d7e675513.json  query-82ad890a5af052bcad6ec12a014d891f579b6b2190d43748671aa26185ae022c.json  query-9b32018ecd261dc1078c31094178b677ffa07a73f9e37e55a90f3b71701bc958.json  query-ae739149aab4c43dcdcbba55d05161fffcd0efdcab18bd55891454e32ef8a92c.json
migrations/: 20230901230200_todos.sql  20230902163433_state.sql
public/: index.html
src/: body.rs  main.rs  state.rs  todo.rs
