[package]
name = "todox"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
maud = { version = "0.25", feature = ["axum"] }
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.32", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["fs"] }
